# worker-service

./: README.md  pyproject.toml
.github/workflows/: ci.yml  scip.yml
src/worker_service/: __init__.py  app.py  config.py  errors.py  lifecycle.py  main.py  observability.py  routes.py  schemas.py  service.py
