[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "worker-service"
version = "1.0.0"
description = "Background jobs and scheduled tasks microservice"
requires-python = ">=3.9"
dependencies = ["core-logger", "fastapi>=0.110", "uvicorn[standard]>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]
